install_data(
  'hicolor_apps_scalable_org.gnome.Terminal.svg',
  install_dir: gt_datadir / 'icons/hicolor/scalable/apps',
  rename: gt_iface_name + '.svg',
)

install_data(
  'hicolor_apps_symbolic_org.gnome.Terminal-symbolic.svg',
  install_dir: gt_datadir / 'icons/hicolor/symbolic/apps',
  rename: gt_iface_name + '-symbolic.svg',
)
